deploy: 0718bc66ab261f9c8748821bae20be3bd0606c5f

--- a/entry__1917-05-19.html
+++ b/entry__1917-05-19.html
@@ -99,7 +99,7 @@
                            Vortrag <a href="person_13374.html" style="color:black">Bahrs</a> für den „Piusverein“;― S. wohnte bei;― <a href="person_16293.html" style="color:black">Hugo</a> und <a href="person_16292.html" style="color:black">Gerty</a> 
                            ― <a href="person_16292.html" style="color:black">Gerty</a> fand den Vortrag ― „überzeugend“).</p>
                         
-                        <p id="p__12">- Ins Regina, bei <a href="person_13355.html" style="color:black">Ama</a> und <a href="person_21600.html" style="color:black">Mimi</a> ― <a href="person_21600.html" style="color:black">Mimi</a> probirt den Trauerhut, <a href="person_21602.html" style="color:black">Vicki</a> möchte 
+                        <p id="p__12">– Ins Regina, bei <a href="person_13355.html" style="color:black">Ama</a> und <a href="person_21600.html" style="color:black">Mimi</a> ― <a href="person_21600.html" style="color:black">Mimi</a> probirt den Trauerhut, <a href="person_21602.html" style="color:black">Vicki</a> möchte 
                            nächstens mit mir spazierengehen, um mit mir zu sprechen. (Er sagte zu 
                            <a href="person_13355.html" style="color:black">Ama</a>. „Ich hätte <a href="person_13359.html" style="color:black">St.</a> vom Fleck weg geheiratet.“) ― Mit O. heim. (<a href="person_13359.html" style="color:black">St.</a> 
                            neulich, als sie <a href="person_18548.html" style="color:black">Rudi O.</a> zur Nordbahn begleitete ― um ½8 morgens von 
