--- a/pmb92129.html
+++ b/pmb92129.html
@@ -136,7 +136,7 @@
                               <li><a href="entry__1931-07-13.html">Montag, 13. Juli 1931</a></li>
                               <li><a href="entry__1931-07-19.html">Sonntag, 19. Juli 1931</a></li>
                               <li><a href="entry__1931-07-21.html">Dienstag, 21. Juli 1931</a></li>
-                              <li><a href="entry__1931-07-24.html">Freitag, 24. Juli 1931</a></li>
+                              <li><a href="entry__1931-07-23.html">Donnerstag, 23. Juli 1931</a></li>
                               <li><a href="entry__1931-07-30.html">Donnerstag, 30. Juli 1931</a></li>
                            </ul>
                         </div>
